using dual auth schema

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,5 +24,6 @@ services:
      environment:
        WORDPRESS_DB_HOST: db:3306
        WORDPRESS_DB_PASSWORD: wordpress
+       WORDPRESS_DEBUG: 1
 volumes:
     db_data:
